# bitcoinv1

./: .gitignore  COPYING  INSTALL  Makefile.am  README.md  configure.ac
.tx/: config
alert keys/: alertkey.hex  alertkey.pem  genesiscoinbase.pem  testnetalert.hex  testnetalert.pem
contrib/: README.md  bitcoinv1-qt.pro  bitcoinv1d.bash-completion  qt_translations.py  tidy_datadir.sh
contrib/bitrpc/: README.md  bitrpc.py
contrib/debian/: README.md  bitcoinv1-qt.desktop  bitcoinv1-qt.install  bitcoinv1-qt.lintian-overrides  bitcoinv1-qt.protocol  bitcoinv1d.bash-completion  bitcoinv1d.examples  bitcoinv1d.install  bitcoinv1d.lintian-overrides  bitcoinv1d.manpages  changelog  control  copyright  rules  watch
contrib/devtools/: README.md  fix-copyright-headers.py  update-translations.py
contrib/gitian-descriptors/: README.md  deps-linux.yml  deps-win.yml  gitian-linux.yml  gitian-osx-bitcoinv1.yml  gitian-win.yml  qt-win.yml
contrib/gitian-downloader/: bluematt-key.pgp  linux-download-config  win32-download-config
contrib/linearize/: example-linearize.cfg  linearize.py
contrib/macdeploy/: DS_Store  README.md  background.psd  fancy.plist  macdeployqtplus
contrib/pyminer/: README.md  pyminer.py
contrib/qos/: README.md  tc.sh
contrib/seeds/: README.md
contrib/spendfrom/: README.md  setup.py  spendfrom.py
contrib/testgen/: README.md  base58.py
contrib/verifysfbinaries/: verify.sh
doc/: Doxyfile  README.md  README_windows.txt  assets-attribution.md  bootstrap.md  build-msw.md  build-osx.md  build-unix.md  coding.md  gitian-building.md  multiwallet-qt.md  release-notes.md  release-process.md  tor.md  translation_process.md  unit-tests.md
doc/release-notes/: release-notes-0.3.12.md  release-notes-0.3.13.md  release-notes-0.3.14.md  release-notes-0.3.15.md  release-notes-0.3.18.md  release-notes-0.3.20.2.md  release-notes-0.3.20.md  release-notes-0.3.21.md  release-notes-0.3.22.md  release-notes-0.3.23.md  release-notes-0.3.24.md  release-notes-0.4.0.md  release-notes-0.4.1.md  release-notes-0.4.3.md  release-notes-0.4.4.md  release-notes-0.4.6.md  release-notes-0.5.0.md  release-notes-0.5.1.md  release-notes-0.5.2.md  release-notes-0.5.3.md  release-notes-0.5.4.md  release-notes-0.5.5.md  release-notes-0.6.0.md  release-notes-0.6.2.md  release-notes-0.6.3.md  release-notes-0.7.0.md  release-notes-0.7.1.md  release-notes-0.7.2.md  release-notes-0.8.0.md  release-notes-0.8.1.md  release-notes-0.8.2.md  release-notes-0.8.3.md  release-notes-0.8.4.md  release-notes-0.8.5.md  release-notes-0.8.6.md  release-notes-0.9.0.md
qa/pull-tester/: build-tests.sh.in  pull-tester.py  pull-tester.sh  run-bitcoinv1d-for-test.sh.in
qa/rpc-tests/: README.md  conflictedbalance.sh  listtransactions.py  send.sh  skeleton.py  txnmall.sh  util.py  util.sh  wallet.sh  walletbackup.sh
share/: setup.nsi.in  ui.rc
share/certs/: BitcoinFoundation_Apple_Cert.pem  BitcoinFoundation_Comodo_Cert.pem  PrivateKeyNotes.md
share/pixmaps/: bitcoinv1128.xpm  bitcoinv116.xpm  bitcoinv1256.xpm  bitcoinv132.xpm  bitcoinv164.xpm
share/qt/: Info.plist.in  extract_strings_qt.py  make_windows_icon.sh
src/: Makefile.am  Makefile.include  addrman.h  alert.cpp  alert.h  allocators.cpp  allocators.h  base58.cpp  base58.h  bignum.h  bitcoinone-config.h.in  bitcoinv1-cli-res.rc  bitcoinv1-cli.cpp  bitcoinv1d-res.rc  bitcoinv1d.cpp  bloom.cpp  bloom.h  chainparams.cpp  chainparams.h  checkpoints.cpp  checkpoints.h  checkqueue.h  clientversion.h  coincontrol.h  coins.cpp  coins.h  compat.h  core.cpp  core.h  crypter.cpp  crypter.h  db.cpp  db.h  hash.h  init.cpp  init.h  key.cpp  key.h  keystore.cpp  keystore.h  (+49 more)
src/compat/: glibc_compat.cpp
src/json/: json_spirit_value.h  json_spirit_writer_template.h
src/m4/: bitcoinv1_find_bdb48.m4  bitcoinv1_qt.m4  bitcoinv1_subdir_to_include.m4
src/qt/: Makefile.am  addressbookpage.cpp  addressbookpage.h  addresstablemodel.cpp  addresstablemodel.h  askpassphrasedialog.cpp  askpassphrasedialog.h  bitcoinv1.cpp  bitcoinv1.qrc  bitcoinv1addressvalidator.cpp  bitcoinv1addressvalidator.h  bitcoinv1amountfield.cpp  bitcoinv1amountfield.h  bitcoinv1gui.cpp  bitcoinv1gui.h  bitcoinv1strings.cpp  bitcoinv1units.cpp  bitcoinv1units.h  clientmodel.cpp  clientmodel.h  coincontroldialog.cpp  coincontroldialog.h  coincontroltreewidget.cpp  coincontroltreewidget.h  csvmodelwriter.cpp  csvmodelwriter.h  editaddressdialog.cpp  editaddressdialog.h  guiconstants.h  guiutil.cpp  guiutil.h  intro.cpp  intro.h  macdockiconhandler.h  macdockiconhandler.mm  macnotificationhandler.h  macnotificationhandler.mm  monitoreddatamapper.cpp  monitoreddatamapper.h  notificator.cpp  (+60 more)
src/qt/forms/: aboutdialog.ui  addressbookpage.ui  coincontroldialog.ui  helpmessagedialog.ui  intro.ui  optionsdialog.ui  overviewpage.ui  receivecoinsdialog.ui  rpcconsole.ui  sendcoinsdialog.ui  sendcoinsentry.ui  signverifymessagedialog.ui
src/qt/locale/: bitcoinv1_ach.ts  bitcoinv1_af_ZA.ts  bitcoinv1_ar.ts  bitcoinv1_be_BY.ts  bitcoinv1_bg.ts  bitcoinv1_bs.ts  bitcoinv1_ca.ts  bitcoinv1_ca@valencia.ts  bitcoinv1_ca_ES.ts  bitcoinv1_cmn.ts  bitcoinv1_cs.ts  bitcoinv1_cy.ts  bitcoinv1_da.ts  bitcoinv1_de.ts  bitcoinv1_el_GR.ts  bitcoinv1_en.ts  bitcoinv1_eo.ts  bitcoinv1_es.ts  bitcoinv1_es_CL.ts  bitcoinv1_es_DO.ts  bitcoinv1_es_MX.ts  bitcoinv1_es_UY.ts  bitcoinv1_et.ts  bitcoinv1_eu_ES.ts  bitcoinv1_fa.ts  bitcoinv1_fa_IR.ts  bitcoinv1_fi.ts  bitcoinv1_fr.ts  bitcoinv1_fr_CA.ts  bitcoinv1_gl.ts  bitcoinv1_gu_IN.ts  bitcoinv1_he.ts  bitcoinv1_hi_IN.ts  bitcoinv1_hr.ts  bitcoinv1_hu.ts  bitcoinv1_id_ID.ts  bitcoinv1_it.ts  bitcoinv1_ja.ts  bitcoinv1_ka.ts  bitcoinv1_kk_KZ.ts  (+31 more)
src/qt/res/: bitcoinv1-qt-res.rc
src/qt/res/icons/: bitcoinv1.icns
src/qt/test/: Makefile.am  test_main.cpp  uritests.cpp
src/test/: Checkpoints_tests.cpp  DoS_tests.cpp  Makefile.am  README.md  accounting_tests.cpp  alert_tests.cpp  allocator_tests.cpp  base32_tests.cpp  base58_tests.cpp  base64_tests.cpp  bignum_tests.cpp  bip32_tests.cpp  bloom_tests.cpp  canonical_tests.cpp  checkblock_tests.cpp  compress_tests.cpp  (+23 more)
(+8 files in other folders)
